Update Support section with contact links

--- a/index.html
+++ b/index.html
@@ -99,7 +99,18 @@
           <div class="card stat"><div class="lbl">Clients</div><div class="val">200+</div></div>
           <div class="card stat"><div class="lbl">Partners</div><div class="val">10+</div></div>
           <div class="card stat"><div class="lbl">Plans</div><div class="val">Insurance & Real Estate</div></div>
-          <div class="card stat"><div class="lbl">Support</div><div class="val">WhatsApp • Email</div></div>
+          <div class="card stat">
+  <div class="lbl">Support</div>
+  <div class="val">
+    <a href="https://wa.me/2348012345678" target="_blank" style="color: inherit; text-decoration: none;">
+      WhatsApp
+    </a>
+    &nbsp;•&nbsp;
+    <a href="mailto:info@karba.com" style="color: inherit; text-decoration: none;">
+      Email
+    </a>
+  </div>
+</div>
         </div>
       </div>
     </div>
