--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <nav>
       <a href="#" onclick="show('landing')">Home</a>
-      <a href="#plans" onclick="show('landing')">Plans</a>
+      <a href="#plans" onclick="show('landing')">Insurance Plans</a>
       <a href="#realestate" onclick="show('landing')">Real Estate</a>
       <a href="#about" onclick="show('landing')">About</a>
       <button class="primary" onclick="show('dashboard')">Portal Login</button>
@@ -101,15 +101,15 @@
           <div class="card stat"><div class="lbl">Plans</div><div class="val">Insurance & Real Estate</div></div>
           <div class="card stat">
   <div class="lbl">Support</div>
-  <div class="val">
-    <a href="https://wa.me/2348012345678" target="_blank" style="color: inherit; text-decoration: none;">
-      WhatsApp
-    </a>
-    &nbsp;•&nbsp;
-    <a href="mailto:info@karba.com" style="color: inherit; text-decoration: none;">
-      Email
-    </a>
-  </div>
+  <div class="val" style="display: flex; gap: 10px; justify-content: center; align-items: center;">
+  <a href="https://wa.me/2348012345678" target="_blank" 
+     style="padding: 8px 14px; border: 1px solid #f0c040; border-radius: 6px; color: #f0c040; text-decoration: none; font-weight: 500;">
+    WhatsApp
+  </a>
+  <a href="mailto:info@karba.com"
+     style="padding: 8px 14px; border: 1px solid #f0c040; border-radius: 6px; color: #f0c040; text-decoration: none; font-weight: 500;">
+    Email
+  </a>
 </div>
         </div>
       </div>
