--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
         <div class="grid grid-2">
           <div class="card stat"><div class="lbl">Clients</div><div class="val">200+</div></div>
           <div class="card stat"><div class="lbl">Partners</div><div class="val">10+</div></div>
-          <div class="card stat"><div class="lbl">Plans</div><div class="val">Insurance & Real Estate</div></div>
+          <div class="card stat"><div class="lbl">Plans</div><div class="val">Life-Insurance & Real Estate</div></div>
           <div class="card stat">
   <div class="lbl">Support</div>
   <div class="val" style="display: flex; gap: 10px; justify-content: center; align-items: center;">
-  <a href="https://wa.me/2348012345678" target="_blank" 
+  <a href="https://wa.me/2349162631205" target="_blank" 
      style="padding: 8px 14px; border: 1px solid #f0c040; border-radius: 6px; color: #f0c040; text-decoration: none; font-weight: 500;">
     WhatsApp
   </a>
-  <a href="mailto:info@karba.com"
+  <a href="mailto:info@karbafinancialconsultant.com"
      style="padding: 8px 14px; border: 1px solid #f0c040; border-radius: 6px; color: #f0c040; text-decoration: none; font-weight: 500;">
     Email
   </a>
@@ -125,7 +125,7 @@
           <h3 style="margin:0 0 8px 0">Insurance Advisory</h3>
           <ul class="list">
             <li>Education Plans (with partial withdrawal schedules)</li>
-            <li>Family Protection & Life Assurance</li>
+            <li>Family Protection & Life Assurance (Whole-life & Term)</li>
             <li><b>Annuity Plans</b> & Retirement</li>
             <li>Motor & General (via partner insurers)</li>
           </ul>
