--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
       <div class="cta">
         <a class="btn primary" href="#">WhatsApp Us</a>
-        <a class="btn" href="#" onclick="show('dashboard')">Register</a>
+        <a class="btn" href="#" onclick="show('dashboard')">Email Us</a>
       </div>
     </div>
   </section>
