--- a/index.html
+++ b/index.html
@@ -217,8 +217,20 @@
         <h3 style="margin:8px 0 0 0">Start with a quick chat. Get verified options within 24–48h.</h3>
       </div>
       <div class="cta">
-        <a class="btn primary" href="#">WhatsApp Us</a>
-        <a class="btn" href="#" onclick="show('dashboard')">Email Us</a>
+        <!-- WhatsApp button -->
+<a class="btn primary" 
+   href="https://wa.me/2349162631205" 
+   target="_blank"
+   style="text-decoration: none;">
+   WhatsApp Us
+</a>
+
+<!-- Email button -->
+<a class="btn" 
+   href="mailto:info@karbafinancialconsultant.com"
+   style="text-decoration: none;">
+   Email Us
+</a>
       </div>
     </div>
   </section>
@@ -340,7 +352,12 @@
 <footer class="footer">
   <div class="container row">
     <div>© <span id="y"></span> KARBA Financial Consultant Ltd. All rights reserved.</div>
-    <div><a href="#" style="color:inherit;text-decoration:none">Privacy</a> • <a style="color:inherit;text-decoration:none" href="#">Terms</a> • <a style="color:inherit;text-decoration:none" href="#">Contact</a></div>
+    <div class="footer-links" style="display: flex; gap: 15px; justify-content: center;">
+  <a href="https://facebook.com/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">Facebook</a>
+  <a href="https://instagram.com/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">Instagram</a>
+  <a href="https://linkedin.com/company/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">LinkedIn</a>
+  <a href="https://x.com/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">X (Twitter)</a>
+</div>
   </div>
 </footer>
 
