--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@
   <div class="container row">
     <div>© <span id="y"></span> KARBA Financial Consultant Ltd. All rights reserved.</div>
     <div class="footer-links" style="display: flex; gap: 15px; justify-content: center;">
-  <a href="https://facebook.com/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">Facebook</a>
-  <a href="https://instagram.com/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">Instagram</a>
-  <a href="https://linkedin.com/company/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">LinkedIn</a>
-  <a href="https://x.com/karbafinancial" target="_blank" style="color: inherit; text-decoration: none;">X (Twitter)</a>
+  <a href="https://facebook.com/profile.php?id=61579013108278/" target="_blank" style="color: inherit; text-decoration: none;">Facebook</a>
+  <a href="https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/" target="_blank" style="color: inherit; text-decoration: none;">Instagram</a>
+  <a href="https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/" target="_blank" style="color: inherit; text-decoration: none;">LinkedIn</a>
+  <a href="https://youtube.com/@KarbaFinancialConsultant" target="_blank" style="color: inherit; text-decoration: none;">YouTube</a>
 </div>
   </div>
 </footer>
