--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
           <a href="#realestate" class="btn">View Real Estate Offers</a>
         </div>
         <div style="margin-top:10px">
-          <span class="pill">NAICOM</span>
-          <span class="pill">CIIN</span>
+          <span class="pill">CAC</span>
           <span class="pill">SCUML</span>
+          <span class="pill">NAICOM</span>
           <span class="pill">LASRERA</span>
+          <span class="pill">CIIN</span>
         </div>
       </div>
       <div class="card">
@@ -193,18 +194,21 @@
       <div>
         <h2 class="title">About KARBA</h2>
         <p class="subtitle" style="line-height:1.6">
-          KARBA Financial Consultant Ltd is your trusted intermediary for Insurance and Real Estate. We help clients access
-          verified opportunities with clarity and confidence — from Education and Family Protection to Annuity Plans and high-
-          potential property deals. Regulated: NAICOM • CIIN • SCUML • LASRERA.
+          KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
+Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
+          Our operations are guided by three core values; Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
+          Our mission to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.
         </p>
       </div>
       <div class="card">
         <h3 style="margin:0">Why Clients Choose KARBA</h3>
         <ul class="list">
+          <li>Certified & trusted advisors (CIIN/NAICOM/LASRERA)</li>
+          <li>Dual advantage (Insurance & Real Estate in one brand)</li>
           <li>Transparent, company-verified quotes (no generic calculators)</li>
-          <li>Direct payments to your chosen insurer or developer</li>
+          <li>Direct payments to your chosen insurer or developer (No hidden charges)</li>
           <li>Receipt upload & admin verification for peace of mind</li>
-          <li>Fast WhatsApp support and clear documentation</li>
+          <li>Fast WhatsApp support and clear documentation (Tech-driven)</li>
         </ul>
       </div>
     </div>
