Refactor real estate listings section in index.html

--- a/index.html
+++ b/index.html
@@ -153,41 +153,50 @@
     </div>
   </section>
 
-  <section class="section" id="listings">
-    <div class="container">
-      <h2 class="title">Featured Real Estate</h2>
-      <p class="subtitle">Live availability with external media links.</p>
-      <div class="grid grid-3">
-        <div class="card">
-          <div class="card" style="height:110px;display:grid;place-items:center;color:var(--muted)">Media: YouTube / Instagram</div>
-          <div style="margin-top:10px;font-weight:600">3-Bedroom Duplex, Lekki Phase 1</div>
-          <div class="subtitle" style="margin:2px 0">₦180m</div>
-          <span class="badge ok">Available</span>
-          <div class="cta" style="margin-top:12px">
-            <a class="btn primary">View Details</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card" style="height:110px;display:grid;place-items:center;color:var(--muted)">Media: YouTube / Instagram</div>
-          <div style="margin-top:10px;font-weight:600">600sqm Land, Ibeju-Lekki</div>
-          <div class="subtitle" style="margin:2px 0">₦25m</div>
-          <span class="badge ok">Available</span>
-          <div class="cta" style="margin-top:12px">
-            <a class="btn primary">View Details</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card" style="height:110px;display:grid;place-items:center;color:var(--muted)">Media: YouTube / Instagram</div>
-          <div style="margin-top:10px;font-weight:600">2-Bed Apartment, Yaba</div>
-          <div class="subtitle" style="margin:2px 0">₦110m</div>
-          <span class="badge">Rented</span>
-          <div class="cta" style="margin-top:12px">
-            <a class="btn primary">View Details</a>
-          </div>
-        </div>
+ <section class="section" id="listings">
+  <div class="container">
+    <h2>Featured Real Estate</h2>
+    <p>Live availability with external media links.</p>
+
+    <div class="grid grid-3" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
+      
+      <!-- PROPERTY CARD 1 -->
+      <div class="card" style="padding: 20px; border: 1px solid #204060; border-radius: 10px;">
+        <h3>3-Bedroom Duplex, Lekki Phase 1</h3>
+        <p style="color: #f0c040;">₦180m • Available</p>
+        <p>Media: 
+          <a href="https://youtube.com/yourlink" target="_blank">YouTube</a> / 
+          <a href="https://instagram.com/yourlink" target="_blank">Instagram</a>
+        </p>
+        <a href="#" class="btn primary">View Details</a>
       </div>
+
+      <!-- PROPERTY CARD 2 -->
+      <div class="card" style="padding: 20px; border: 1px solid #204060; border-radius: 10px;">
+        <h3>600sqm Land, Ibeju-Lekki</h3>
+        <p style="color: #f0c040;">₦25m • Available</p>
+        <p>Media: 
+          <a href="https://youtube.com/yourlink" target="_blank">YouTube</a> / 
+          <a href="https://instagram.com/yourlink" target="_blank">Instagram</a>
+        </p>
+        <a href="#" class="btn primary">View Details</a>
+      </div>
+
+      <!-- PROPERTY CARD 3 -->
+      <div class="card" style="padding: 20px; border: 1px solid #204060; border-radius: 10px;">
+        <h3>2-Bed Apartment, Yaba</h3>
+        <p style="color: #f0c040;">₦110m • Rented</p>
+        <p>Media: 
+          <a href="https://youtube.com/yourlink" target="_blank">YouTube</a> / 
+          <a href="https://instagram.com/yourlink" target="_blank">Instagram</a>
+        </p>
+        <a href="#" class="btn primary">View Details</a>
+      </div>
+
+      <!-- ✳ Add more properties below by simply copying the card block above ✳ -->
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="section" id="about">
     <div class="container grid grid-2">
@@ -196,8 +205,8 @@
         <p class="subtitle" style="line-height:1.6">
           KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
 Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
-          Our operations are guided by three core values; Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
-          Our mission to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.
+          Our operations are guided by three core values: Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
+          Our mission is to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.
         </p>
       </div>
       <div class="card">
@@ -206,9 +215,10 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
           <li>Certified & trusted advisors (CIIN/NAICOM/LASRERA)</li>
           <li>Dual advantage (Insurance & Real Estate in one brand)</li>
           <li>Transparent, company-verified quotes (no generic calculators)</li>
-          <li>Direct payments to your chosen insurer or developer (No hidden charges)</li>
+          <li>Direct payments to your chosen insurer or developer</li>
           <li>Receipt upload & admin verification for peace of mind</li>
           <li>Fast WhatsApp support and clear documentation (Tech-driven)</li>
+          <li>Tailored solutions for individuals,families,investors,& businesses.</li>
         </ul>
       </div>
     </div>
