--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
   </div>
 </section>
 
+<!-- Make sure your JS is loaded with defer (or place script tag at end of body) -->
+<script src="script.js" defer></script>
+
   <section class="section" id="about">
     <div class="container grid grid-2">
       <div>
