--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<script src="script.js" defer></script>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
@@ -159,23 +158,41 @@
     <h2>Featured Real Estate</h2>
     <p>Live availability with external media links.</p>
 
-    <div id="listContainer" style="display:flex; flex-direction:column; gap:12px; margin-top:12px;"></div>
-
-    <div style="margin-top:14px; display:flex; gap:10px; align-items:center;">
-      <label for="moreSelect" style="opacity:.8;">More:</label>
-      <select id="moreSelect" style="padding:8px 10px; border:1px solid #345; background:transparent; color:#fff;">
-        <option value="">Select another property…</option>
-      </select>
-      <button id="showAllBtn" class="btn" style="padding:8px 12px; border:1px solid #345; background:transparent; color:#fff;">
-        Show all remaining
-      </button>
+    <!-- Each property = 1 simple line -->
+    <div style="border-top:1px solid #345; padding:10px 0;">
+      <strong>3-Bedroom Duplex, Lekki Phase 1</strong> – ₦180m • Available
+      <br>
+      <small>
+        Media:
+        <a href="https://youtube.com/yourlink1" target="_blank" style="color:#5eb3ff;">YouTube</a> /
+        <a href="https://instagram.com/yourlink1" target="_blank" style="color:#5eb3ff;">Instagram</a>
+      </small>
     </div>
+
+    <div style="border-top:1px solid #345; padding:10px 0;">
+      <strong>600sqm Land, Ibeju-Lekki</strong> – ₦25m • Available
+      <br>
+      <small>
+        Media:
+        <a href="https://youtube.com/yourlink2" target="_blank" style="color:#5eb3ff;">YouTube</a> /
+        <a href="https://instagram.com/yourlink2" target="_blank" style="color:#5eb3ff;">Instagram</a>
+      </small>
+    </div>
+
+    <div style="border-top:1px solid #345; padding:10px 0;">
+      <strong>2-Bed Apartment, Yaba</strong> – ₦110m • Rented
+      <br>
+      <small>
+        Media:
+        <a href="https://youtube.com/yourlink3" target="_blank" style="color:#5eb3ff;">YouTube</a> /
+        <a href="https://instagram.com/yourlink3" target="_blank" style="color:#5eb3ff;">Instagram</a>
+      </small>
+    </div>
+
+    <!-- Add more properties below by simply copying this block -->
   </div>
 </section>
-
-<!-- Make sure your JS is loaded with defer (or place script tag at end of body) -->
-<script src="script.js" defer></script>
-
+  
   <section class="section" id="about">
     <div class="container grid grid-2">
       <div>
