Refactor property listings to use ordered list

--- a/index.html
+++ b/index.html
@@ -184,156 +184,44 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
     <h2>Featured Real Estate</h2>
     <p>Live availability with external media links.</p>
 
-    <!-- Each property = 1 simple line -->
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>3-Bedroom Duplex, Lekki Phase 1</strong> – ₦180m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink1" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink1" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
+    <ol style="list-style: none; margin: 0; padding: 0; border-top: 1px solid #345; border-bottom: 1px solid #345;">
 
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>600sqm Land, Ibeju-Lekki</strong> – ₦25m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink2" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink2" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
+      <li style="border-top: 1px solid #345; padding: 12px 0; display: flex; justify-content: space-between; align-items: center;">
+        <div>
+          <strong>1. 3-Bedroom Duplex, Lekki Phase 1</strong> – ₦180m • Available<br>
+          <small>
+            Media:
+            <a href="https://youtube.com/yourlink1" target="_blank" style="color:#5eb3ff;">YouTube</a> /
+            <a href="https://instagram.com/yourlink1" target="_blank" style="color:#5eb3ff;">Instagram</a>
+          </small>
+        </div>
+      </li>
 
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>2-Bed Apartment, Yaba</strong> – ₦110m • Rented
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink3" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink3" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
+      <li style="border-top: 1px solid #345; padding: 12px 0; display: flex; justify-content: space-between; align-items: center;">
+        <div>
+          <strong>2. 600sqm Land, Ibeju-Lekki</strong> – ₦25m • Available<br>
+          <small>
+            Media:
+            <a href="https://youtube.com/yourlink2" target="_blank" style="color:#5eb3ff;">YouTube</a> /
+            <a href="https://instagram.com/yourlink2" target="_blank" style="color:#5eb3ff;">Instagram</a>
+          </small>
+        </div>
+      </li>
 
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>3-Bedroom Duplex, Lekki Phase 1</strong> – ₦180m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink1" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink1" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
+      <li style="border-top: 1px solid #345; padding: 12px 0; display: flex; justify-content: space-between; align-items: center;">
+        <div>
+          <strong>3. 2-Bed Apartment, Yaba</strong> – ₦110m • Rented<br>
+          <small>
+            Media:
+            <a href="https://youtube.com/yourlink3" target="_blank" style="color:#5eb3ff;">YouTube</a> /
+            <a href="https://instagram.com/yourlink3" target="_blank" style="color:#5eb3ff;">Instagram</a>
+          </small>
+        </div>
+      </li>
 
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>600sqm Land, Ibeju-Lekki</strong> – ₦25m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink2" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink2" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>2-Bed Apartment, Yaba</strong> – ₦110m • Rented
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink3" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink3" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>3-Bedroom Duplex, Lekki Phase 1</strong> – ₦180m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink1" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink1" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>600sqm Land, Ibeju-Lekki</strong> – ₦25m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink2" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink2" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>2-Bed Apartment, Yaba</strong> – ₦110m • Rented
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink3" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink3" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>3-Bedroom Duplex, Lekki Phase 1</strong> – ₦180m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink1" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink1" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>600sqm Land, Ibeju-Lekki</strong> – ₦25m • Available
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink2" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink2" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <div style="border-top:1px solid #345; padding:10px 0;">
-      <strong>2-Bed Apartment, Yaba</strong> – ₦110m • Rented
-      <br>
-      <small>
-        Media:
-        <a href="https://youtube.com/yourlink3" target="_blank" style="color:#5eb3ff;">YouTube</a> /
-        <a href="https://instagram.com/yourlink3" target="_blank" style="color:#5eb3ff;">Instagram</a>
-      </small>
-    </div>
-
-    <!-- Add more properties below by simply copying this block -->
+    </ol>
   </div>
 </section>
-  
-  <section class="section" id="about">
-    <div class="container grid grid-2">
-      <div>
-        <h2 class="title">About KARBA</h2>
-        <p class="subtitle" style="line-height:1.6">
-          KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
-Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
-          Our operations are guided by three core values: Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
-          Our mission is to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.
-        </p>
-      </div>
-      <div class="card">
-        <h3 style="margin:0">Why Clients Choose KARBA</h3>
-        <ul class="list">
-          <li>Certified & trusted advisors (CIIN/NAICOM/LASRERA)</li>
-          <li>Dual advantage (Insurance & Real Estate in one brand)</li>
-          <li>Transparent, company-verified quotes (no generic calculators)</li>
-          <li>Direct payments to your chosen insurer or developer</li>
-          <li>Receipt upload & admin verification for peace of mind</li>
-          <li>Fast WhatsApp support and clear documentation (Tech-driven)</li>
-          <li>Tailored solutions for individuals,families,investors,& businesses.</li>
-        </ul>
-      </div>
-    </div>
-  </section>
 
   <section class="section" id="contact">
     <div class="container row">
